<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffa9faff"
    tools:context="biz.arpius.aurkizazu.Categoria$PlaceholderFragment">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ciudad"
        android:id="@+id/btnCiudad"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_btn_ciudad"
        android:lines="2"
        android:paddingLeft="6sp"
        android:paddingRight="6sp"
        android:textSize="40sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_playa"
        android:id="@+id/btnPlaya"
        android:layout_alignTop="@+id/btnMonte"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/rounded_btn_playa"
        android:lines="2"
        android:paddingLeft="6sp"
        android:paddingRight="6sp"
        android:textSize="40sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_monte"
        android:id="@+id/btnMonte"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/rounded_btn_monte"
        android:lines="2"
        android:paddingLeft="6sp"
        android:paddingRight="6sp"
        android:textSize="40sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_granja"
        android:id="@+id/btnGranja"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_btn_granja"
        android:lines="2"
        android:paddingLeft="6sp"
        android:paddingRight="6sp"
        android:textSize="40sp" />

</RelativeLayout>
